- Fix bug #37816 ReflectionProperty does not throw exception when accessing protected attribute

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@216031 c90b9560-bf6c-de11-be94-00142212c4b1